# apiservers/portlayer/swagger.yml
@@ -281,7 +281,7 @@ paths:
         '200':
           description: "OK"
           schema:
-              $ref: "#/definitions/ContainerCreatedInfo"
+            $ref: "#/definitions/ContainerCreatedInfo"
   /exec/{id}/start:
     post:
       description: "Starts an existing container by id"
@@ -302,6 +302,28 @@ paths:
             $ref: "#/definitions/Error"
         '200':
           description: "OK"
+  /exec/containers/{id}/info:
+    get:
+      description: "Retrieve info about a container by id"
+      summary: "Retrieve a container's info"
+      operationId: ContainerInfo
+      tags: ["exec"]
+      consumes:
+        - application/octet-stream
+      produces:
+        - application/json
+      parameters:
+        - name: id
+          in: path
+          type: string
+          required: true
+      responses:
+        '404':
+          description: "Container not found"
+          schema:
+            $ref: "#/definitions/Error"
+        '200':
+          description: "Retrieve info succeeded"
   /interaction/{id}/join:
     post:
       description: "Establish an interaction session with a container by id"
@@ -317,7 +339,59 @@ paths:
           in: path
           type: string
           required: true
+        - name: stdin
+          in: query
+          type: boolean
+        - name: stdout
+          in: query
+          type: boolean
+        - name: stderr
+          in: query
+          type: boolean
+        - name: stream
+          in: query
+          type: boolean
       responses:
+        '500':
+          description: "Container join failed"
+          schema:
+            $ref: "#/definitions/Error"
+        '404':
+          description: "Container not found"
+          schema:
+            $ref: "#/definitions/Error"
+        '200':
+          description: "OK"
+  /interaction/{id}/resize:
+    post:
+      description: "Resize the container's tty session"
+      summary: "Resize tty session"
+      operationId: ContainerResize
+      tags: ["interaction"]
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - name: id
+          in: path
+          type: string
+          required: true
+        - name: height
+          in: query
+          type: integer
+          format: int32
+          required: true
+        - name: width
+          in: query
+          type: integer
+          format: int32
+          required: true
+      responses:
+        '500':
+          description: "Container resize failed"
+          schema:
+            $ref: "#/definitions/Error"
         '404':
           description: "Container not found"
           schema:
